<resources>
    <string name="app_name">Petify</string>
    <string name="default_web_client_id">625574624349-a9gghguck7351srd92uame9tb68mq3po.apps.googleusercontent.com</string>
    <string name="this_is_item_sample">This is item sample!</string>
    <string name="title_intro_1">Khám Phá Ngay Hôm Nay!</string>
    <string name="content_intro_1">Nơi tình yêu dành cho thú cưng trở thành hiện thực!</string>
    <string name="title_intro_2">Khám Phá Sản Phẩm Đỉnh Cao</string>
    <string name="content_intro_2">Từ đồ chơi đến thức ăn, tất cả chỉ với vài cú chạm!</string>
    <string name="title_intro_3">Thể Hiện Tình Yêu Với Thú Cưng!</string>
    <string name="content_intro_3">Petify mang đến những sản phẩm tuyệt vời giúp thú cưng của bạn luôn vui vẻ và hạnh phúc!</string>
    <string name="tv_continue">Continue</string>
    <string name="tiep_theo">Tiếp theo</string>
    <string name="bat_dau">Bắt đầu</string>
    <string name="tv_dangnhap">Đăng nhập vào tài khoản của bạn bằng email hoặc mạng xã hội</string>
    <string name="chao_mung">Chào mừng trở lại</string>
    <string name="tao_moi">Tạo tài khoản mới</string>
    <string name="tv_tai_khoan">Có vẻ như bạn không có tài khoản hoặc kết nối với mạng xã hội</string>
    <string name="chua_co_tai_khoan">Chưa có tài khoản?</string>
    <string name="dang_ky"> Đăng ký</string>
    <string name="dang_nhap">" Đăng nhập"</string>
    <string name="da_co_tai_khoan">Đã có tài khoản?</string>
    <string name="google">Google</string>
    <string name="nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="email">Email</string>
    <string name="ten">Tên</string>
    <string name="hoac">Hoặc</string>
    <string name="facebook">Facebook</string>
    <string name="quen_mat_khau"><u>Quên mật khẩu?</u></string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="tv_update_pass_success">Cập nhật mật khẩu \n thành công</string>
    <string name="tv_success_pass">Mật khẩu của bạn đã được cập nhật thành công</string>
    <string name="tv_ma_xac_minh">Chúng tôi đã gửi mã xác minh đến số điện thoại di động của bạn</string>
    <string name="tv_mat_khau_mơi">Vui lòng nhập mật khẩu của bạn</string>
    <string name="tv_dat_lai_mat_khau">Chọn chi tiết liên hệ nào chúng tôi sẽ sử dụng để đặt lại mật khẩu của bạn</string>
    <string name="tiep_tuc">Tiếp tục</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="nhanh"><u>đ</u>20.000</string>
    <string name="tong_so_tien_1_san_pham"><u>đ</u>120.000</string>
    <string name="tong_tien_hang"><u>đ</u>100.000</string>
    <string name="phi_van_chuyen"><u>đ</u>20.000</string>
    <string name="tv_chinh_sach_bao_mat">Chính Sách Bảo Mật Của Petify</string>
    <string name="tv_pricacy1">Chúng tôi, đội ngũ phát triển ứng dụng Petify, cam kết bảo vệ quyền riêng tư của bạn. Chính sách bảo mật này giải thích cách chúng tôi thu thập, sử dụng, chia sẻ và bảo vệ thông tin cá nhân của bạn khi sử dụng ứng dụng Petify.</string>
    <string name="tv_pricacy2">Chúng tôi có thể thu thập các thông tin sau từ người dùng:</string>
    <string name="tv_pricacy3">Thông tin cá nhân: Tên, địa chỉ email, số điện thoại, địa chỉ giao hàng, và thông tin thanh toán để hoàn tất đơn hàng và giao hàng.</string>
    <string name="tv_pricacy4">Thông tin hoạt động: Dữ liệu về các thao tác, lịch sử mua hàng và các hành động khác trong ứng dụng để tối ưu hóa dịch vụ và hỗ trợ khách hàng.</string>
    <string name="tv_pricacy5">Chúng tôi sử dụng thông tin cá nhân của bạn cho các mục đích sau:</string>
    <string name="tv_pricacy6">Xử lý đơn hàng và thanh toán: Để đảm bảo quá trình mua hàng và thanh toán diễn ra an toàn và chính xác.</string>
    <string name="tv_pricacy7">Cải thiện dịch vụ: Phân tích dữ liệu để nâng cao hiệu suất ứng dụng, phát triển tính năng mới, và tối ưu hóa trải nghiệm người dùng.</string>
    <string name="tv_pricacy8">Gửi thông báo và khuyến mãi: Cập nhật thông tin đơn hàng, thông báo bảo trì và các ưu đãi đặc biệt cho người dùng đã đăng ký.</string>
    <string name="tv_pricacy9">Chúng tôi cam kết không chia sẻ thông tin cá nhân của bạn với bên thứ ba ngoại trừ các trường hợp sau:</string>
    <string name="tv_pricacy10">Các đối tác giao hàng và thanh toán: Để hoàn thành các yêu cầu đơn hàng và quá trình giao hàng.</string>
    <string name="tv_pricacy11">Theo yêu cầu pháp lý: Khi có yêu cầu từ cơ quan pháp luật hoặc để bảo vệ quyền lợi của chúng tôi và người dùng.</string>
    <string name="tv_pricacy12">Chúng tôi áp dụng các biện pháp bảo mật phù hợp để bảo vệ thông tin cá nhân của bạn, bao gồm:</string>
    <string name="tv_pricacy13">Mã hóa dữ liệu: Các thông tin nhạy cảm như thông tin thanh toán được mã hóa để bảo vệ an toàn.</string>
    <string name="tv_pricacy14">Giới hạn quyền truy cập: Chỉ nhân viên cần thiết mới có quyền truy cập vào thông tin cá nhân của người dùng.</string>
    <string name="tv_pricacy15">Người dùng có các quyền sau đối với thông tin cá nhân của mình:</string>
    <string name="tv_pricacy16">Quyền truy cập: Bạn có thể yêu cầu truy cập hoặc sao chép dữ liệu cá nhân mà chúng tôi lưu trữ.</string>
    <string name="tv_pricacy17">Quyền chỉnh sửa: Yêu cầu chỉnh sửa nếu thông tin của bạn không chính xác hoặc không đầy đủ.</string>
    <string name="tv_pricacy18">Quyền xóa bỏ: Yêu cầu xóa dữ liệu cá nhân của bạn khỏi hệ thống của chúng tôi.</string>
    <string name="tv_pricacy19">Chính sách bảo mật này có thể được cập nhật theo thời gian. Chúng tôi sẽ thông báo qua email hoặc trên ứng dụng nếu có bất kỳ thay đổi quan trọng nào.</string>
    <string name="tv_pricacy20">Nếu có bất kỳ câu hỏi nào liên quan đến chính sách bảo mật hoặc cách chúng tôi xử lý thông tin cá nhân, vui lòng liên hệ với chúng tôi qua:</string>
    <string name="tv_pricacy_email">Email: doan379a@gmail.com</string>
    <string name="tv_pricacy_hotline">Hotline: 0123-456-789</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question2_card20">The Seven of Swords represents secrecy, dishonesty, or evasion. Your ex may be keeping aspects of their relationship hidden or may be involved in a relationship that lacks openness. They might be avoiding full commitment or not entirely forthcoming about their status.</string>
    <string name="question24_card20">This card represents deception and self-sabotage. Your money block may stem from a lack of trust in yourself or your financial abilities. You might be avoiding financial responsibilities or engaging in self-sabotaging behaviors due to fear of failure. To overcome this block, work on building self-confidence and recognizing your capacity to manage your finances effectively. Be honest with yourself about your financial situation and take proactive steps to improve it.</string>
    <string name="question39_card20">This card symbolizes deception, avoidance, and strategic thinking. It suggests that you might be in denial about the effects of your bad habits on your health. The Seven of Swords encourages you to be honest with yourself and face the reality of your situation. Avoiding the truth will not lead to positive change. Instead, take a proactive approach to understand how these habits might be undermining your health.</string>
    <string name="question45_card20">This card symbolizes deception, avoidance, and strategy. It suggests that you may be avoiding certain truths about your health or not facing the reality of your situation. The Seven of Swords encourages you to be honest with yourself and recognize any unhealthy behaviors you might be justifying or ignoring. Consider what aspects of your health you may be trying to sidestep or rationalize.</string>
    <string name="question18_card21">This card represents generosity and giving. To enhance your relationship with money, consider the importance of both giving and receiving. Engage in acts of kindness, such as donating or helping others financially. Cultivating a spirit of generosity can create a flow of abundance, reinforcing the idea that money is meant to circulate rather than be hoarded.</string>
    <string name="question21_card21">This card represents generosity and giving. It indicates that money may come your way through acts of kindness, whether it be from receiving help from others or engaging in charitable endeavors yourself. It encourages you to create a flow of energy in your financial life by giving and receiving. Networking or building relationships within your community may also lead to financial opportunities.</string>
    <string name="question29_card21">This card represents generosity and balance in giving and receiving. It indicates that your financial difficulties can be alleviated through support from others or by being open to assistance. You may find that seeking help or sharing resources can create a positive flow of abundance in your life. This card encourages you to both give and receive with an open heart, as this can lead to financial resolution.</string>
    <string name="question30_card21">This card represents generosity, balance, and reciprocity. It suggests that your financial support may be beneficial not only for your family but also for you, as long as there is a balance in giving and receiving. Consider whether your support is fostering a sense of responsibility and mutual aid within the family. If your assistance is leading to growth and reciprocity, it can be a positive choice to continue your support.</string>
    <string name="question52_card21">The Six of Pentacles encourages generosity and receiving support. This card suggests that reducing stress might involve accepting help from others or seeking balance in giving and receiving. Whether by delegating tasks or spending time helping someone in need, finding ways to share burdens can ease your stress.</string>
    <string name="question55_card22">The Three of Swords represents heartbreak and emotional pain. Your anxiety may stem from past traumas or unresolved feelings related to relationships or emotional wounds. This card urges you to confront these feelings and work towards healing, allowing you to release the burden they carry.</string>
    <string name="question8_card23">This card symbolizes indecision and stalemate. It indicates that you may be at a crossroads in your love life, unsure about what you truly want. You might be torn between different options or hesitant to make a decision, which can lead to prolonged periods of being single.</string>
    <string name="question22_card23">This card represents indecision and inner conflict. It suggests that you may feel torn between the desire to enjoy your money and the guilt associated with it. This inner struggle can create confusion and make it challenging to make financial decisions. Take time to reflect on what truly matters to you and how you can enjoy your money in a way that feels aligned with your values.</string>
    <string name="question23_card23">This card symbolizes indecision and inner conflict. Your financial struggles may be teaching you to make choices and take decisive action. It encourages you to confront your fears and uncertainties regarding money, allowing you to gain confidence in your financial decisions. Embrace the lesson of clarity and commit to taking steps toward financial stability.</string>
    <string name="question25_card23">This card represents indecision and inner conflict. It suggests that the one thing standing between you and success might be your inability to make clear decisions or confront important choices in your life. You may be avoiding critical issues or struggling to see the path forward. To overcome this obstacle, take time for reflection and clarity. Embrace the necessity of making choices, even if they are difficult, and trust your intuition to guide you toward the right direction.</string>
</resources>