<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signup"
    tools:context=".ui.signup.SignupActivity">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="141dp"
        android:layout_height="140dp"
        android:src="@drawable/img_splash"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tao_moi"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/loginPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:gravity="center"
        android:text="@string/tv_tai_khoan"
        android:textSize="16sp"
        android:textColor="@color/light_gray"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etTen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ten"
        android:padding="10dp"
        android:layout_marginHorizontal="40dp"
        android:textSize="16sp"
        android:background="@drawable/bg_intro"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/loginPrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:textColorHint="@color/light_gray"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_intro"
        app:layout_constraintTop_toBottomOf="@id/etTen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:textColorHint="@color/light_gray"
        />

    <EditText
        android:id="@+id/etMatkhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/mat_khau"
        android:padding="10dp"
        android:textSize="16sp"
        android:background="@drawable/bg_intro"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:drawableEnd="@drawable/ic_eye"
        android:textColorHint="@color/light_gray"
        />

    <EditText
        android:id="@+id/etNhaplaimk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/nhap_lai_mat_khau"
        android:padding="10dp"
        android:textSize="16sp"
        android:background="@drawable/bg_intro"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/etMatkhau"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableStart="@drawable/ic_password"
        android:drawableEnd="@drawable/ic_eye"
        android:drawablePadding="10dp"
        android:textColorHint="@color/light_gray"
        />


    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:text="@string/dang_ky"
        android:textColor="@android:color/white"
        android:layout_marginTop="25dp"
        android:textAllCaps="false"
        android:padding="10dp"
        android:background="@drawable/bg_btn"
        app:layout_constraintTop_toBottomOf="@id/etNhaplaimk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hoac"
            android:textColor="@color/black"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/light_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/linearOr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="40dp"
            android:gravity="center"
            android:background="@drawable/bg_intro"
            android:padding="12dp">

            <ImageView
                android:id="@+id/ivGoogle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_gg"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/tvGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google"
                android:textSize="14sp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="40dp"
            android:gravity="center"
            android:background="@drawable/bg_intro"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_fb"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/tvFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                android:textSize="14sp"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="130dp"
        app:layout_constraintTop_toBottomOf="@id/linearOr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/registerPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/da_co_tai_khoan"
            android:textColor="@color/lighter_gray" />

        <TextView
            android:id="@+id/tvDangnhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dang_nhap"
            android:textStyle="bold"
            android:textColor="@color/color_app"
            android:paddingStart="4dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>